--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/companion-gift-app?serverTimezone=UTC
+spring.datasource.username=revan
+spring.datasource.password=revan
