--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/companion-gift-app?serverTimezone=UTC
 spring.datasource.username=revan
 spring.datasource.password=revan
+
+google.recaptcha.secret=${RECAPTCHA_SECRET:6Lez8sMUAAAAAPbZC-2g6KuOpB9poyCTff0msuOi}
