--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+google.recaptcha.secret=${RECAPTCHA_SECRET:6Lez8sMUAAAAAPbZC-2g6KuOpB9poyCTff0msuOi}
