--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/companion-gift-app?serverTimezone=UTC
+spring.datasource.username=revan
+spring.datasource.password=revan
 
 google.recaptcha.secret=${RECAPTCHA_SECRET:6Lez8sMUAAAAAPbZC-2g6KuOpB9poyCTff0msuOi}
