--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/companion-gift-app?serverTimez
 spring.datasource.username=revan
 spring.datasource.password=revan
 
+spring.jpa.show-sql=true
+
 google.recaptcha.secret=${RECAPTCHA_SECRET:6Lez8sMUAAAAAPbZC-2g6KuOpB9poyCTff0msuOi}
